Update RuntimeDataArea.md